# ann-project

./: .gitignore  pyproject.toml
configs/: config.yaml
notebooks/: colab_train.ipynb  exploration.ipynb  kaggle_train.ipynb
src/: dataset.py  download_data.py  evaluate.py  inference.py  model.py  train.py  utils.py
