[project]
name = "car-model-recognition"
version = "0.1.0"
description = "Car make and model recognition using deep learning (BIL462 - Junkers)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "timm>=0.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "tensorboard>=2.16.0",
    "kaggle>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
